--- a/luigi/static/header.html
+++ b/luigi/static/header.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-	<script type="text/javascript" charset="utf-8" src="/jquery"></script>
-	<script type="text/javascript" charset="utf-8" src="/svgpan"></script>
+	<script type="text/javascript" charset="utf-8" src="static/jquery-1.7.1.min.js"></script>
+	<script type="text/javascript" charset="utf-8" src="static/SVGPan.js"></script>
 	<script type="text/javascript" charset="utf-8">
 	$(function(){
 		$("svg").attr({"width": "100%", "height": "100%"});
