--- a/luigi/static/header.html
+++ b/luigi/static/header.html
@@ -5,11 +5,10 @@
 	<script type="text/javascript" charset="utf-8">
 	$(function(){
 		$("svg").attr({"width": "100%", "height": "100%"});
-		$("text").hide();
 		setupHandlers($("svg")[0]);
 	});
 	var timeout = null;
-	var textShown = null;
+	var textShown = true;
 
 	function showText() {
 		if (!textShown)
