changed to AmE spelling of visualizer

--- a/luigi/static/visualizer/test.html
+++ b/luigi/static/visualizer/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Luigi Visualiser Tests</title>
+        <title>Luigi Visualizer Tests</title>
         <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.11.0.css">
     </head>
     </body>
