--- a/luigi/static/visualizer/index.html
+++ b/luigi/static/visualizer/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Luigi Task Visualiser</title>
+        <title>Luigi Task Visualizer</title>
         <script src="lib/jquery-1.10.0.min.js"></script>
         <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <script src="lib/bootstrap/js/bootstrap.min.js"></script>
         <script src="lib/mustache.js"></script>
         <script src="js/luigi.js"></script>
         <script src="js/graph.js"></script>
-        <script src="js/visualiserApp.js"></script>
+        <script src="js/visualizerApp.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <style type="text/css">
@@ -128,7 +128,7 @@
             
         </div>
         <script>
-            visualiserApp(new LuigiAPI("../../api"));
+            visualizerApp(new LuigiAPI("../../api"));
         </script>
     </body>
 </html>
