--- a/luigi/static/visualiser/index.html
+++ b/luigi/static/visualiser/index.html
@@ -106,6 +106,8 @@
                 <div id="failedTasks" class="taskList"></div>
                 <h3>Running Tasks</h3>
                 <div id="runningTasks" class="taskList"></div>
+                <h3>Suspended Tasks</h3>
+                <div id="suspendedTasks" class="taskList"></div>
                 <h3>Pending Tasks</h3>
                 <div id="pendingTasks" class="taskList"></div>
                 <h3>Done Tasks</h3>
