--- a/luigi/static/visualiser/index.html
+++ b/luigi/static/visualiser/index.html
@@ -274,6 +274,9 @@
                   </div>
                   <div class="modal-body">
                     Are you sure you want to disable this worker?
+                    <p>
+                        A disabled worker will finish its existing tasks but not start new ones.
+                    </p>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
@@ -308,6 +311,9 @@
                     Running: {{num_running}}<br>
                     Pending: {{num_pending}}<br>
                     Unique Pending: {{num_uniques}}<br>
+                    {{#is_disabled}}
+                    This worker is <b>disabled</b>. It will not start on new tasks.<br>
+                    {{/is_disabled}}
 
                     {{#num_running}}
                     <hr>
