index.html: Spelling error fix

--- a/luigi/static/visualiser/index.html
+++ b/luigi/static/visualiser/index.html
@@ -312,7 +312,7 @@
                     Pending: {{num_pending}}<br>
                     Unique Pending: {{num_uniques}}<br>
                     {{#is_disabled}}
-                    This worker is <b>disabled</b>. It will not start on new tasks.<br>
+                    This worker is <b>disabled</b>. It will not start new tasks.<br>
                     {{/is_disabled}}
 
                     {{#num_running}}
